# Filmeve

./: .gitignore  README.md  pyproject.toml
data/processed/: bias_reduction_results.csv  discovered_users_diverse.json  test_groups_diverse.json
data/raw/MovieLens_100K/: MovieLens | GroupLens.webloc
data/test/: split_metadata.json
models/: feature_columns.pkl  feature_columns_bias_reduced.pkl  final_model.pkl  model_bias_reduced.pkl  model_bias_reduced_config.yaml  model_config.yaml
notebooks/: 01_sources.ipynb  02_cleanup_EDA.ipynb  03_training_evaluation.ipynb  04_bias_reduction.ipynb  05_ga_group_recommendations.ipynb
notebooks/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
results/: ga_results_steven_spielberg_fans.json
src/: bias_reduction.py  clean_data.py  discover_users_diverse.py  feature_engineering.py  recommend_for_group.py  source_data.py  tmdb_scraper.py  train_model.py
streamlit_app/: README.md  app.py  requirements.txt  utils.py
